; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_m68kq68.c_m68kq68_init.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_m68kq68.c_m68kq68_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@state = common dso_local global i32 0, align 4
@dummy_read = common dso_local global i32 0, align 4
@dummy_write = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @m68kq68_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @m68kq68_init() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @q68_create()
  store i32 %2, i32* @state, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %20

5:                                                ; preds = %0
  %6 = load i32, i32* @state, align 4
  %7 = call i32 @q68_set_irq(i32 %6, i32 0)
  %8 = load i32, i32* @state, align 4
  %9 = load i32, i32* @dummy_read, align 4
  %10 = call i32 @q68_set_readb_func(i32 %8, i32 %9)
  %11 = load i32, i32* @state, align 4
  %12 = load i32, i32* @dummy_read, align 4
  %13 = call i32 @q68_set_readw_func(i32 %11, i32 %12)
  %14 = load i32, i32* @state, align 4
  %15 = load i32, i32* @dummy_write, align 4
  %16 = call i32 @q68_set_writeb_func(i32 %14, i32 %15)
  %17 = load i32, i32* @state, align 4
  %18 = load i32, i32* @dummy_write, align 4
  %19 = call i32 @q68_set_writew_func(i32 %17, i32 %18)
  store i32 0, i32* %1, align 4
  br label %20

20:                                               ; preds = %5, %4
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @q68_create(...) #1

declare dso_local i32 @q68_set_irq(i32, i32) #1

declare dso_local i32 @q68_set_readb_func(i32, i32) #1

declare dso_local i32 @q68_set_readw_func(i32, i32) #1

declare dso_local i32 @q68_set_writeb_func(i32, i32) #1

declare dso_local i32 @q68_set_writew_func(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
